# rcp-rclm

./: .gitattributes  .gitignore  .phase11-finalization-payload.b64  .phase12e_source_artifact.json  .phase13_complete_materialized  .phase8_payload.part00  .phase8_payload.part01  .phase8_payload.part02  .phase8_payload.part03  .phase8_payload.part04  .phase8_payload.part05  .phase8_payload.part06  .phase8_payload.part07  .phase8_payload.part08  .phase8_payload.part09  .phase8_payload.part10  CITATION.cff  LICENSE  README.md  RELEASE_NOTES.md  SHA256SUMS.txt
python/rcp_rclm_runtime_v2/: README.md  phase_1_manifest.json  phase_1_validation.json  phase_2_manifest.json  phase_2_validation.json  phase_3_manifest.json  phase_4_manifest.json  phase_4_validation.json  phase_5_manifest.json  phase_5_validation.json  phase_5a_manifest.json  phase_5a_validation.json  phase_6_manifest.json  phase_6_validation.json  phase_7_manifest.json  phase_7_validation.json  phase_8_manifest.json  phase_8_validation.json  pyproject.toml  pytorch_pilot_manifest.json  pytorch_pilot_validation.json
python/rcp_rclm_runtime_v2/rcp_rclm_runtime/: __init__.py  _version.py  classical.py  errors.py  numeric.py  quantum.py  rclm.py  records.py
python/rcp_rclm_runtime_v2/rcp_rclm_runtime_v2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/rcp_rclm_runtime_v2/tests/: conformance_vectors.json  helpers.py  test_canonical.py  test_classical.py  test_conformance_vectors.py  test_intervals.py  test_phase1_manifest.py  test_quantum.py  test_rational.py  test_refinement.py  test_schema.py  test_source_guard.py
python/rcp_rclm_runtime_v2/tests_phase2/: test_compiler.py  test_packet.py  test_phase2_manifest.py  test_phase2_release.py  test_source_generator.py  test_source_guard_metadata.py  test_verdict_parser.py  test_verifier.py
python/rcp_rclm_runtime_v2/tests_phase3/: phase3_helpers.py  test_checker.py
python/rcp_rclm_runtime_v2/tests_phase4/: test_adversarial_suite.py  test_hardened_checker.py
python/rcp_rclm_runtime_v2/tests_phase5/: phase5_helpers.py  test_reference_generator.py  test_reference_pipeline.py
python/rcp_rclm_runtime_v2/tests_phase6/: test_successor_package.py
python/rcp_rclm_runtime_v2/tests_phase7/: phase7_helpers.py  test_promotion_controller.py
python/rcp_rclm_runtime_v2/tests_phase8/: phase8_helpers.py  test_independent_replay.py
python/rcp_rclm_runtime_v2/tests_pytorch_pilot/: test_admission_replay.py  test_proposal_backend.py
python/rcp_rclm_runtime_v2/tools/: emit_phase1_report.py  run_phase1_tests.py  run_phase2_conformance.py  run_phase2_tests.py  run_phase3_tests.py  run_phase4_adversarial.py  run_phase4_tests.py  run_phase5_reference_pipeline.py  run_phase5_reference_replay.py  run_phase5_tests.py  run_phase5a_process_suite.py  run_phase6_reference_suite.py  run_phase6_tests.py  run_phase7_reference_suite.py  run_phase7_tests.py  run_phase8_reference_suite.py  run_phase8_tests.py  run_pytorch_pilot_admission_fixture.py  run_pytorch_pilot_reference.py  run_pytorch_pilot_tests.py  validate_phase1_release.py  validate_phase2_release.py  validate_source_quality.py
python/rcp_rclm_runtime_v3/: README.md  phase_10_closure_manifest.json  phase_10_learned_manifest.json  phase_10_manifest.json  phase_11_closure_manifest.json  phase_11_generator_manifest.json  phase_9_manifest.json  phase_9_validation.json  pyproject.toml
python/rcp_rclm_runtime_v3/rcp_rclm_runtime_v3/: __init__.py
python/rcp_rclm_runtime_v3/rcp_rclm_runtime_v3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/rcp_rclm_runtime_v3/tests_phase10/: test_closure_manifest.py  test_learned_substrate.py  test_lifecycle.py  test_substrate.py
python/rcp_rclm_runtime_v3/tests_phase11/: test_phase11_closure_manifest.py  test_phase11a_manifest.py  test_phase11a_reference.py  test_phase11b_lifecycle.py
python/rcp_rclm_runtime_v3/tests_phase12/: test_phase12a_recursive_start.py  test_phase12b_first_promotion.py  test_phase12c_memory_retrieval.py  test_phase12d_generator_planner.py  test_phase12e_complete_trajectory.py
python/rcp_rclm_runtime_v3/tests_phase13/: test_phase13_pinned_lean_process.py  test_phase13a_replay_boundary.py  test_phase13b_trajectory_bundle.py  test_phase13c_full_replay.py
python/rcp_rclm_runtime_v3/tests_phase9/: test_contract.py
python/rcp_rclm_runtime_v3/tools/: build_phase13_trajectory_bundle.py  phase10_training_worker.py  phase12e_training_worker.py  run_phase10_closure.py  run_phase10_lean_tasks.py  run_phase10_learned_reference.py  run_phase10_lifecycle_reference.py  run_phase10_reference.py  run_phase10_tests.py  run_phase10_training_reference.py  run_phase11_reference.py  run_phase11_tests.py  run_phase11b_closure.py  run_phase12_tests.py  (+39 more)
(+1141 files in other folders)
