[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rcp-rclm-runtime-v2"
version = "0.9.0"
description = "Deterministic runtime, pinned Lean bridge, fail-closed checker, adversarial rejection, bounded generation, verified successor packages, atomic promotion, independent replay, and an optional untrusted CPU-only PyTorch proposal pilot for RCP/RCLM Formal Core v2"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "See repository LICENSE and component licenses"}
authors = [{name = "RCP/RCLM project"}]
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]

[project.optional-dependencies]
torch-pilot = ["torch==2.10.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["rcp_rclm_runtime*"]

[tool.setuptools.package-data]
rcp_rclm_runtime = ["py.typed"]
