[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rcp-rclm-runtime-v3"
version = "0.10.0"
description = "Gate D, self-hosted Phase 12 trajectory surfaces, and Phase 13 replay-boundary contract"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "See repository LICENSE and component licenses"}
authors = [{name = "RCP/RCLM project"}]
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]

[project.optional-dependencies]
test = ["jsonschema==4.23.0"]
phase10-train = ["numpy==2.3.5", "torch==2.10.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["rcp_rclm_runtime_v3*"]

[tool.setuptools.package-data]
rcp_rclm_runtime_v3 = ["py.typed"]